Add new test cases for BestMoveSearch to enhance coverage