@@ -1,65 +1,49 @@
-# BestMoveSearch Optimisation Roadmap
+# BestMoveSearch – Evaluation Time Goal
 
-## Guiding Principles
-- Optimise the actual engine search loop; the diagnostic harness must remain a faithful mirror of production behaviour.
-- Measure first, change second. Every optimisation must demonstrate tangible search-time or accuracy gains against the baseline.
-- Maintain deterministic outputs and existing mate/score conventions; protect against evaluation regressions with focused tests.
+### Goal
 
-## Phase 0 – Baseline & Instrumentation (Day 0-1) ✅
-1. ✅ Reproduced the depth-8 BestMoveSearch scenario (single-thread baseline ≈3.0 s).
-2. ✅ Captured telemetry (per-depth nodes, TT stats, JFR profile of hotspots).
-3. ✅ Established baseline target (<2 s for depth 8) against the recorded 3 s single-thread run.
-4. ✅ Archived diagnostics and JFR under `logs/test-runs/20251017_172542/baseline/`.
+Speed up **BestMoveSearchTest** without changing any fixture moves or depths. A few failing tests are fine if total runtime drops.
 
-## Phase 1 – Concurrency & Scheduling (Day 2-4)
-1. ✅ Auto-detect optimal `searchThreads`/`lazySmpThreads`/`rootParallelLimit` when no overrides are provided (SearchConcurrencyPlanner in place).
-2. ✅ Audit thread start-up and coordination:
-   - ✅ Ensure helper threads are spawned once and reused between searches while keeping shutdown deterministic.
-   - ✅ Remove unnecessary synchronisation (heuristics merge now skips the write lock when no per-thread updates exist).
-   - ✅ Wait for active searches to finish before purging worker threads to avoid dangling simulators.
-3.  Benchmark multi-core scaling; target ≥1.8× speed-up vs. single-thread baseline on 8+ logical cores. *(Latest 16-thread run: 3.1 s vs. 3.0 s baseline ⇒ 0.97×, still below goal.)*
-4.  Extend regression tests to cover multi-thread configurations (BestMoveSearch + AITest_MoveOrderingBuckets).
+### Rules
 
-> Current status: planner integrated; deterministic tests updated; helper lifecycle stabilised with reusable threads. Next priority is running multi-thread benchmarks before advancing to Phase 2.
+* Don’t edit `BestMoveFixture`.
+* Tune only through `seed-tunings.yaml` or modify the code in AI.java if you find bugs related to seed-tunings.yaml values.
+* Diagnostics and parallel search stay enabled.
 
-## Phase 2 – Root Move Ordering & Iterative Deepening (Day 5-7)
-1. Analyse root ordering statistics (TT, killers, history scores) for the slow scenario.
-2. Optimise:
-   - Prioritise TT move propagation earlier in ordering.
-   - Introduce lightweight history heuristics reset between root depth iterations.
-   - Revisit aspiration window sizing to avoid repeated fail-high/fail-low cascades.
-3. Add targeted micro-benchmarks for ordering changes (per-depth node counts, cutoff rates).
+### What to Improve
 
-## Phase 3 – Pruning & Reduction Policies (Day 8-11)
-1. Re-evaluate null-move pruning depth/material thresholds for late endgames like the provided FEN.
-2. Tune LMR/LMP parameters using staged experiments (single-position, suite, then auto tuner).
-3. Validate against regression suites (MateInThreeToSeven, AvoidRepetitionDraw) to ensure tactical safety.
+1. **Pruning**
 
-## Phase 4 – Evaluation Fast Path (Day 12-14)
-1. Profile evaluation hotspot frequency in depth-8 run; cache or precompute terms that dominate (>10% CPU).
-2. Investigate incremental update opportunities for king safety / pawn structure specific to sparse endgames.
-3. Add evaluation microbenchmarks to guard against future regressions.
+    * Tune LMR, LMP, and NMP to cut more useless nodes.
+    * Add futility/SEE thresholds in YAML.
+2. **Move Ordering**
 
-## Phase 5 – Validation & Rollout (Day 15-16)
-1. Re-run full BestMoveSearch suite, MateSearch, PGN smoke tests, and targeted multi-thread stress runs.
-2. Compare new telemetry vs. Phase 0 baseline; ensure:
-   - Depth-8 scenario < 2 s (or equivalent success at lower depth).
-   - No increase in regression failures.
-3. Document changes in `Agents.md` (testing guidance) and create release notes summarising key wins.
+    * TT move always first if score close.
+    * Knight/central capture tie‑break only within epsilon.
+3. **Aspiration Windows**
 
-## Ongoing Workstreams
-- Maintain a tuning backlog for search/evaluation experiments informed by telemetry.
-- Periodically review `seed-tunings.yaml` alignment with engine changes to avoid stale parameters.
+    * Start narrow, widen on fail high/low.
+4. **Evaluation**
 
-## Next Steps
-1. Stabilise test suite with the new planner defaults:
-   - ✅ Fix `UciSyzygyFlowTest` to assert TB hits without timing out (use deterministic single-thread tuning and mock result injection).
-   - ✅ Confirm transposition-table capacity tests reflect live weight ratios.
-2. ✅ Capture multi-threaded BestMoveSearch telemetry (depth 8) and compare against the 3 s baseline.
-3. ✅ Profile coordination locks with ≥16 helper threads; identify write-lock hot spots to trim in Phase 1 Step 2.
-4. ✅ Inspect `searchJobs` and `calculationRequests` queue behaviour under load to confirm there is no producer/consumer imbalance.
-5. Once concurrency improvements are validated, proceed to Phase 2 root-move ordering analysis.
-6. Analyse the 16-thread BestMoveSearch telemetry (3.1 s, 553k nodes) to explain the missing ≥1.8× scaling and identify candidates for Phase 1 Step 3 remediation.
-7. ✅ Capture a Java Flight Recorder trace for the multi-thread benchmark (run 2025-10-17, `logs/test-runs/20251017_201135/best-move-search-multithread/bms-16t.jfr`) to surface contention hotspots.
-8. ✅ Mine the JFR (`jdk.ExecutionSample`, `jdk.ThreadPark`, `jdk.ThreadCPULoad`) plus the diagnostics above to verify how much time threads spend outside core search (init, evaluation pipeline) before attempting scaling fixes (current samples: ~39 % in evaluation, no `Simulator-*` sightings).
-9. Add instrumentation or warm-up experiments (e.g., longer pre-run, per-thread sampling, queue metrics) to confirm whether helper threads are under-utilised before pursuing algorithmic changes. *(Instrumentation runs 2025-10-17: sequential `BestMoveSearchTest` keeps Lazy SMP idle; new `BestMoveSearchParallelHarnessTest` + optional flag `-Dchessengine.diagnostics.useParallelRoot=true` exercise the real parallel path and log fanout (20 submitted/completed, zero fallback). README now documents the flag/worker options. Next = decide if the main diagnostics should enable the flag by default or remain opt-in while focusing on the production harness for scaling work.)*
+    * Soften noisy modules in YAML (e.g. threat vs. activity) to avoid re‑searches.
+5. **Performance Check**
+
+    * Target runtime ≤ 3 min with diagnostics on.
+    * Node count or locks down; helpers > 75 % busy.
+
+### Measure
+
+```bash
+mvn -Djava.version=25 -Dmaven.compiler.release=25 -Dmaven.compiler.enablePreview=true \
+    -DargLine="--enable-preview" -Dtest=BestMoveSearchTest test
+```
+
+### Accept
+
+✅ Faster total time (≈ −30 %)
+⚠️ ≤ 2 new fixture fails allowed
+🧠 Keep YAML as single source of truth
+
+### Log
+
+Store decision traces under `logs/test-runs/<timestamp>/best-move-search/` and note any tuning change that improved speed.
